# textual-select

./: .gitignore  LICENSE  README.md  dropdown_app.py  pyproject.toml
examples/: dropdowns.py
notes/: README.md
tests/: test_attributes.py  test_interaction.py
textual_select/: __init__.py  _select.py
widgets/: __init__.py  select.py
