[tool.poetry]
name = "textual-select"
version = "0.2.1"
description = "A select widget (aka dropdown) for Textual."
authors = ["Mischa Schindowski <mschindowski@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "textual_select"}]
repository = "https://github.com/mitosch/textual-select"
keywords = ["textual", "textual select", "textual dropdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
textual = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
textual = { version = ">=0.6.0", extras = ["dev"] }
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
